--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link href="css/styles.css" rel="stylesheet" type="text/css">
   <link href='http://fonts.googleapis.com/css?family=EB+Garamond' rel='stylesheet' type='text/css'>
   <link href="fonts/ss-social-regular/webfonts/ss-social-regular.css" rel="stylesheet" />
-  <Link rel="icon" type="image/ico" href="favicon.ico">
+  <Link rel="icon" type="image/ico" href="http://egouy.github.io/favicon.ico">
  </head>
 
  <body>
