--- a/index.html
+++ b/index.html
@@ -1,34 +1,48 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html>
- <head>
-  <title>Ulrich Egouy</title>
-  <meta name="Description" content="Product Manager & Designer. Formely Strategic Projects as employee #3 at Kigo. Sciences Po graduate.">
-  <link href="css/styles.css" rel="stylesheet" type="text/css">
-  <link href='http://fonts.googleapis.com/css?family=EB+Garamond' rel='stylesheet' type='text/css'>
-  <link href="fonts/ss-social-regular/webfonts/ss-social-regular.css" rel="stylesheet" />
-  <Link rel="icon" type="image/ico" href="http://egouy.github.io/favicon.ico">
- </head>
+<!DOCTYPE html>
+<html lang="en">
 
- <body>
-  <header>
-    <h1>Ulrich Egouy</h1>
-    <h2>Product Manager & Designer</h2>
-  </header>
+<head>
+    <link rel="icon" href="icon.png">
+    <link rel="stylesheet" href="styles.css">
 
-  <img src="img/ulrich-egouy.jpg" alt="Ulrich Egouy">
+    <meta charset="utf-8">
+    <meta name="description" content="Product Manager & Designer. Sciences Po graduate.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <section>
-    <p>I help startups make useful products. Formely Strategic Projects as employee #3 at <a href="http://kigo.net">Kigo</a>. Sciences Po Paris graduate.<br> Feel free to contact me at <a href="mailto:ulrich@egouy.com">ulrich@egouy.com</a>.</p>
-  </section>
+    <title>Ulrich Egouy - Product Manager & Designer</title>
 
-  <section>
-    <ul>
-    	<li><a href="http://www.linkedin.com/in/ulrichegouy" class="ss-icon ss-social">LinkedIn</a></li>
-      <li><a href="http://www.facebook.com/UlrichEgouy" class="ss-icon ss-social">Facebook</a></li>
-    	<li><a href="http://twitter.com/richego" class="ss-icon ss-social">Twitter</a></li>
-    	<li><a href="http://pinterest.com/ulrich" class="ss-icon ss-social">Pinterest</a></li>
-    	<li><a href="mailto:ulrich@egouy.com" class="ss-icon ss-social">Email</a></li>
-    </ul>
-  </section>
- </body>
+	<script>
+console.log(
+      '%c👋 Hey there, like what you see? \n🐛 Found a bug or something to improve? Please, let me know by e-mail, twitter, github issue... \n\nThanks for reading!',
+      'font-size: 1.2em; line-height: 1.5'
+    ); </script> 
+
+</head>
+
+<body>
+<main>
+<section>
+
+<div>
+<h1>Hey,<br>
+I'm Ulrich Egouy</h1>
+<p>I've helped startups and tech companies design and<br>
+build their products <a href="https://www.linkedin.com/in/ulrichegouy/" class="u-link" data-title="💼 My LinkedIn">for more than 10 years</a>.</p>
+<p>Feel free to contact me at <a href="mailto:ulrich@egouy.com" class="u-link" target="_blank" data-title="👋 E-mail me">ulrich@egouy.com</a>.</p>
+</div>
+
+<div class="outer-circle">
+  <div class="inner-circle">  
+  </div>
+  <span></span>
+  <span></span>
+  <span></span>
+  <span></span>
+</div>
+
+</section>
+</main>
+
+</body>
+
 </html>
